tests/valid/trait/method_call_short_ufcs_local_inferred_pure_receiver_extra_arg.facet
trait Combiner {
  fn combine(self: Self, rhs: unrestricted isize) -> unrestricted isize;
}

impl Combiner for unrestricted isize {
  fn combine(self: Self, rhs: unrestricted isize) -> unrestricted isize {
    rhs
  }
}

fn main() -> unrestricted isize {
  let x = 1;
  (Combiner::combine x 2)
}
