tests/invalid/module/file_module_duplicate_decl.facet
mod dupe_file;

mod dupe_file {
  pub fn id(x: affine isize) -> affine isize { x }
}

fn main() -> affine isize {
  (dupe_file::id 1)
}
